[package]
authors = [ "Erik Reinert" ]
edition = "2018"
name = "tasks-server"
version = "0.1.0"

[dependencies]
diesel = { version = "1.4.7", features = ["postgres"] }
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.1", features = ["json", "uuid"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
